REFACTOR: improve code clarity and organization

--- a/tests/integration/plot_topology_show.ipynb
+++ b/tests/integration/plot_topology_show.ipynb
@@ -108,7 +108,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "edge-sim-py-py3.12",
+   "display_name": "edge-sim-py-MBnVrx4Z-py3.12",
    "language": "python",
    "name": "python3"
   },
