REFACTOR: organize folder and adjust some issue for simulator

--- a/tests/integration/plot_topology_show.ipynb
+++ b/tests/integration/plot_topology_show.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "24278f06",
    "metadata": {},
    "outputs": [],
@@ -17,13 +17,13 @@
     "from edge_sim_py.dataset_generator.network_topologies import partially_connected_fullduplex_hexagonal_mesh\n",
     "\n",
     "\n",
-    "from plot_topology import plot_topology\n",
+    "from visualization.plot_topology import plot_topology\n",
     "from conftest import _servers_base_station, _services_processing, reset_components"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "2a6d6a78",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "0e305c7e",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "aa70212d",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "aed3e21b",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "a5a28c72",
    "metadata": {},
    "outputs": [
